<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/textClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textData"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-132dp"
        android:text="@string/textClass"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/textLast"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_above="@+id/textClass"
        android:layout_alignParentStart="true"
        android:text="@string/textLast"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:onClick="findVehicleData"
        android:text="@string/btnSearch" />

    <EditText
        android:id="@+id/editTxtVehicleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSearch"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/editTxtVehicleId"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="151dp"
        android:text="@string/dataClass"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imgClass"
        android:layout_width="83dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:contentDescription="@string/imgDesc"
        app:srcCompat="@drawable/f2" />

    <TextView
        android:id="@+id/txtClassDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:text="@string/textClassDesc"
        android:textAlignment="center" />

</RelativeLayout>